# OaC8

./: .gitignore  AGENTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
bpmn/: README.md  bookkeeping-process.bpmn  invoice-process.bpmn  onboarding-entry.bpmn
docs/: START_HERE.md  access-and-issue-operations.md  architecture.md  avv-checkliste-eventlock-saas.md  business-os.md  copilot-quickstart-15min.md  einfuehrung-greenfield-brownfield.md  eventstream-implementation-templates.md  fachanwender-guide.md  fork-and-release-operating-model.md  function8-service-catalog.md  github-identity-role-model.md  governance.md  issue-backlog-public.md  issue-taxonomie-pro-repo.md  oac-enterprise-control-plane-mvp.md  organization-as-code-positioning.md  platform-onboarding-matrix.md  public-readiness.md  quality-gate.md  repo-refactor-plan-single-repo-modules.md  role-model.md  sbom-products.md  security-and-dsgvo.md  service-business-core-vertical-blueprint.md  startup-verification.md  technology-decision.md  third-party-operations-and-exit.md  vertical-starter-prozesskatalog.md  vscode-copilot-start.md  vscode-first-user-path.md
policies/: access-control-policy.yaml  culture-policy.yaml  data-protection-policy.yaml  github-identity-registry.json  onboarding-diagrams.json  onboarding-flow.json  process-policy.yaml  provider-open-services-policy.yaml  revisionssicherheit-eventstream-policy.yaml  role-model-policy.yaml  sbom-policy.yaml  startup-requirements.yaml  (+2 more)
(+72 files in other folders)
