[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gitaas-business-os"
version = "0.1.0"
description = "Reference implementation for Git-driven business processes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
business-os = "business_os.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
